# tock

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.web  README.md  SECURITY.md  deny.toml  dist-workspace.toml  docker-compose.yml  flake.nix
.cargo/: config.toml
.github/: CODEOWNERS  FUNDING.yml  copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/skills/md-lint/: SKILL.md
.github/skills/pr-ready/: SKILL.md
.github/workflows/: audit.yml  ci.yml  release.yml
apps/ios/: Package.swift  README.md
apps/ios/Tests/TockAppTests/: PairingCodeCodecTests.swift
apps/macos/: Package.swift  README.md
apps/watchos/: Package.swift  README.md
apps/web/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/lib/: account.ts  admin.ts  credentials.ts  selfservice.ts  sync.ts
apps/web/src/pages/: AccountPage.tsx  AdminPage.tsx  LoginPage.tsx  SetupPage.tsx  SignupPage.tsx  TasksPage.tsx
apps/web/test/: account.test.ts  admin.test.ts  credentials.test.ts  e2e.selfhost.test.ts  selfservice.test.ts  smoke.selfhost.test.ts
bindings/swift/: Package.swift  README.md
bindings/swift/Sources/TockFFI/: Placeholder.swift
crates/tock-account/: Cargo.toml
crates/tock-account/src/: codec.rs  credentials.rs  error.rs  kdf_params.rs  lib.rs  login.rs  rotate.rs  signup.rs
crates/tock-account/tests/: signup_login.rs
crates/tock-caldav/: Cargo.toml  README.md
crates/tock-caldav/src/: error.rs  ical.rs  lib.rs  mapping.rs  sync.rs  transport.rs
crates/tock-cli/: Cargo.toml  README.md  i18n.toml
crates/tock-cli/i18n/en-US/: tock-cli.ftl
crates/tock-cli/src/: clap_i18n.rs  display.rs  hooks.rs  http_transport.rs  i18n.rs  main.rs  notify.rs  tracing_setup.rs
crates/tock-cli/src/commands/: account.rs  add.rs  caldav.rs  checklist.rs  config.rs  context.rs  done.rs  focus.rs  habit.rs  hooks_cmd.rs  list.rs  mod.rs  modify.rs  project.rs  report.rs  show.rs  sync_cmd.rs  tag.rs  time.rs  uda.rs  views.rs
crates/tock-cli/src/config/: duration.rs  keys.rs  mod.rs  sample.toml
crates/tock-cli/src/tui/: mod.rs  state.rs  ui.rs
crates/tock-cli/tests/: e2e_sync.rs
crates/tock-core/: Cargo.toml  README.md
crates/tock-core/src/: error.rs  event.rs  lib.rs
crates/tock-core/src/domain/: annotation.rs  area.rs  cadence.rs  checklist.rs  focus.rs  habit.rs  heading.rs  idle.rs  mod.rs  project.rs  recurrence.rs  report.rs  sid.rs  tag.rs  task.rs  time_block.rs  uda.rs  urgency.rs
crates/tock-core/src/vault/: header.rs  keys.rs  mod.rs
crates/tock-crypto/: Cargo.toml  README.md
crates/tock-crypto/src/: aead.rs  base32.rs  error.rs  kdf.rs  keyexchange.rs  lib.rs  random.rs  secret.rs  secret_key.rs  signature.rs  srp.rs
crates/tock-crypto/tests/: srp_2skd.rs
crates/tock-export/: Cargo.toml  README.md
crates/tock-export/src/: error.rs  json.rs  lib.rs  markdown.rs
crates/tock-import/: Cargo.toml  README.md
crates/tock-import/src/: csv_import.rs  json.rs  lib.rs  taskwarrior.rs  things3.rs
crates/tock-parse/: Cargo.toml  README.md
crates/tock-parse/src/: date.rs  filter.rs  lib.rs
crates/tock-server/: Cargo.toml  README.md
crates/tock-server/src/: accounts.rs  admin.rs  auth.rs  billing.rs  cli.rs  codec.rs  db.rs  error.rs  lib.rs  main.rs  metrics.rs  quota.rs  routes.rs  selfservice.rs  state.rs
crates/tock-server/tests/: accounts_api.rs  self_service.rs  server_info.rs  srp_sync.rs
crates/tock-storage/: Cargo.toml  README.md
crates/tock-storage/src/: error.rs  event_log.rs  lib.rs  migrations.rs  undo.rs  vault.rs
crates/tock-storage/src/migrations/: 0001_initial.sql  0002_event_log.sql  0003_domain_tables.sql  0004_time_blocks.sql  0005_focus_sessions.sql  0006_habits.sql  0007_uda_definitions.sql  0008_saved_reports.sql  0009_contexts.sql  0010_caldav_links.sql  0011_sync_state.sql  0012_device_revocation.sql  0013_undo_log.sql  0014_checklist_items.sql  0015_app_state.sql
crates/tock-storage/src/repo/: activity_repo.rs  annotation_repo.rs  area_repo.rs  caldav_link_repo.rs  checklist_repo.rs  context_repo.rs  focus_repo.rs  habit_repo.rs  heading_repo.rs  mod.rs  project_repo.rs  report_repo.rs  sid_repo.rs  tag_repo.rs  task_repo.rs  time_block_repo.rs  uda_repo.rs
crates/tock-storage/src/sync/: mod.rs  registry.rs  row.rs  state.rs
crates/tock-storage/tests/: account_login.rs  sync_substrate.rs
crates/tock-sync/: Cargo.toml  README.md
crates/tock-sync/src/: conflict.rs  engine.rs  error.rs  lib.rs  pairing.rs  recovery.rs  revocation.rs  transport.rs  wire.rs
crates/tock-uniffi/: Cargo.toml  README.md
crates/tock-uniffi/src/: account.rs  convert.rs  error.rs  lib.rs  types.rs  workspace.rs
crates/tock-wasm/: Cargo.toml
crates/tock-wasm/src/: lib.rs
deploy/helm/tock-server/: Chart.yaml  values.yaml
deploy/proxy/: Caddyfile  README.md  nginx.conf  traefik.md
deploy/systemd/: tock-server.service
deploy/web/: nginx.conf
docs/: TRANSLATING.md  architecture.md  configuration.md  dogfooding.md  naming-decision.md  self-hosting.md
docs/adr/: ADR-001-rust-zero-io-core.md  ADR-002-end-to-end-encryption.md  ADR-003-event-sourced-sync.md  ADR-004-sqlite-app-layer-encryption.md  ADR-005-platform-bindings.md  ADR-006-licensing-dual-license.md  ADR-007-monetization-open-core.md  ADR-008-unified-domain-model.md  ADR-009-natural-language-cli.md  ADR-010-srp-authentication.md  ADR-011-account-based-self-host-two-secret-auth.md  ADR-012-client-account-onboarding.md  ADR-013-vault-format-versioning-policy.md  ADR-014-at-rest-encryption-app-layer-aead.md  ADR-015-pre-1.0-security-audit-status.md  README.md  TEMPLATE.md
docs/distribution/: README.md
docs/distribution/homebrew/: tock.rb
docs/security/: audit-scope.md
scripts/: release.ps1
xtask/: Cargo.toml  README.md
xtask/src/: i18n_check.rs  main.rs
(+130 files in other folders)
