[workspace]
resolver = "2"
members = [
    "crates/tock-core",
    "crates/tock-crypto",
    "crates/tock-parse",
    "crates/tock-storage",
    "crates/tock-sync",
    "crates/tock-import",
    "crates/tock-export",
    "crates/tock-caldav",
    "crates/tock-cli",
    "crates/tock-server",
    "crates/tock-uniffi",
    "xtask",
]
default-members = [
    "crates/tock-core",
    "crates/tock-crypto",
    "crates/tock-parse",
    "crates/tock-storage",
    "crates/tock-sync",
    "crates/tock-import",
    "crates/tock-export",
    "crates/tock-caldav",
    "crates/tock-cli",
    "crates/tock-server",
    "crates/tock-uniffi",
]

[workspace.package]
version = "0.4.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
repository = "https://github.com/kafkade/tock"
homepage = "https://github.com/kafkade/tock"
authors = ["The tock authors"]

# Shared dependency versions. Members opt in via `dep = { workspace = true }`.
# Kept intentionally small for the foundation phase; expand as real
# implementation lands.
[workspace.dependencies]
tock-core = { path = "crates/tock-core", version = "0.4.0" }
tock-crypto = { path = "crates/tock-crypto", version = "0.4.0" }
tock-parse = { path = "crates/tock-parse", version = "0.4.0" }
tock-storage = { path = "crates/tock-storage", version = "0.4.0" }
tock-sync = { path = "crates/tock-sync", version = "0.4.0" }
tock-import = { path = "crates/tock-import", version = "0.4.0" }
tock-export = { path = "crates/tock-export", version = "0.4.0" }
tock-caldav = { path = "crates/tock-caldav", version = "0.4.0" }
tock-server = { path = "crates/tock-server", version = "0.4.0" }

# Crypto primitives (used by tock-crypto). All audited RustCrypto crates.
# See docs/adr/ADR-002-end-to-end-encryption.md.
aes-gcm = "0.10"
argon2 = "0.5"
hkdf = "0.13"
sha2 = "0.11"
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets", "zeroize"] }
ed25519-dalek = { version = "2", default-features = false, features = ["rand_core", "zeroize"] }
# SRP-6a (RFC 5054) PAKE for zero-knowledge auth (ADR-010/011). The 0.7 line is
# constant-time (crypto-bigint), RFC5054-correct, and uses digest 0.11 matching
# our sha2 0.11. `default-features = false` drops the crate's own getrandom/
# rand_core — ephemerals are generated via `tock_crypto::random::fill_random`.
srp = { version = "0.7.0-rc.3", default-features = false }
zeroize = { version = "1.8", features = ["derive"] }
subtle = "2.6"
rand_core = { version = "0.6", features = ["getrandom"] }
thiserror = "2"
uniffi = "0.31"

# Domain & storage shared deps.
uuid = { version = "1", features = ["v4", "v5", "v7", "serde"] }
time = { version = "0.3", default-features = false, features = ["std", "macros", "formatting", "parsing", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled", "blob", "uuid", "time"] }

# Async runtime + HTTP server (used by tock-server, AGPL-3.0).
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.7", features = ["cors", "trace"] }

# Async trait support for the sync Transport abstraction (no runtime,
# WASM-safe) and the CLI's concrete HTTP transport (ADR-001).
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Tracing / structured logging.
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# CLI argument parsing.
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
crossterm = "0.29"
csv = "1"
dirs = "6"
tera = "2"
ratatui = "0.30"
toml = "1.1"

# Localization / i18n (Fluent via i18n-embed). CLI-facing only.
i18n-embed = { version = "0.16", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.10"
rust-embed = { version = "8", features = ["debug-embed"] }
unic-langid = "0.9"

# Test-only utilities.
proptest = "1"
tempfile = "3"

# Fluent localization syntax parser (used by `xtask i18n-check`).
fluent-syntax = "0.12"

# Mandatory lint set per docs/architecture.md §4.1.1. Members opt in with
# `[lints] workspace = true`. `tock-uniffi` overrides `unsafe_code` because
# UniFFI-generated code requires `unsafe` blocks; that crate isolates all
# unsafe FFI behind its boundary.
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
rust_2024_compatibility = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

# Profile for the Apple FFI static libraries packaged into TockFFI.xcframework.
# Inherits the optimised release settings but keeps symbols: stripping would
# remove the `#[no_mangle]` UniFFI scaffolding functions, breaking linkage
# from the generated Swift bindings. See xtask `xcframework` and issue #119.
[profile.apple-ffi]
inherits = "release"
strip = false
lto = false

[profile.dev]
# Faster incremental rebuilds during foundation work.
debug = "line-tables-only"
