[package]
name = "xtask"
description = "Internal build orchestration tasks for the tock workspace. Not published."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
fluent-syntax = { workspace = true }

[dev-dependencies]
