[package]
name = "tock-account"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Zero-I/O account signup/login orchestration (2SKD + SRP-6a) shared by every tock client edge."

[lints]
workspace = true

[dependencies]
tock-core = { workspace = true }
tock-crypto = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tock-storage = { workspace = true }
tock-server = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tempfile = { workspace = true }
