[package]
name = "tock-caldav"
description = "CalDAV bidirectional sync for tock: iCal mapping, sync engine, transport trait."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
tock-core = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
