[package]
name = "tock-cli"
description = "Command-line interface for tock — unified task / habit / time / focus engine."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"

[features]
# Match architecture §4.3.3.
default = ["tui", "completion"]
tui = []
completion = []

[[bin]]
name = "tock"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
tock-core = { workspace = true }
tock-storage = { workspace = true }
tock-parse = { workspace = true }
tock-sync = { workspace = true }
tock-import = { workspace = true }
tock-export = { workspace = true }
tock-caldav = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
i18n-embed = { workspace = true }
i18n-embed-fl = { workspace = true }
rust-embed = { workspace = true }
unic-langid = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
