[package]
name = "tock-core"
description = "Pure-computation core library for tock: domain model, queries, urgency scoring, recurrence."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"

[features]
# Always-loaded surface (must stay under the 2 MB compressed WASM budget;
# enforced in a later phase). Kept feature-flagged from the start so the
# WASM CI build can target `--no-default-features --features core`.
default = ["std"]
std = []
core = []
# Reserved feature flags for lazy-loaded modules (architecture §4.3.3).
sync = []
import-export = []
serde = []
schemars = []

[lints]
workspace = true

[dependencies]

[dev-dependencies]
