[package]
name = "tock-crypto"
description = "Cryptographic primitives for tock: key hierarchy, AEAD, KDF, recovery codes."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]

[dev-dependencies]
