[package]
name = "tock-export"
description = "Exporters from tock to JSON, CSV, hledger timeclock, iCal, and Markdown."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
tock-core = { workspace = true }
tock-storage = { workspace = true }

[dev-dependencies]
