[package]
name = "tock-import"
description = "Importers for Todoist, Things 3, Toggl, hledger timeclock, and CSV → tock."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"

[lints]
workspace = true

[dependencies]
tock-core = { workspace = true }
tock-storage = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
csv = { workspace = true }
toml = { workspace = true }
time = { workspace = true }

[dev-dependencies]
